// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ApplicationCardV2 components match their snapshots completed status component matches snapshot 1`] = `
<ApplicationCardV2
  claim={
    BenefitsApplication {
      "application_id": "mock_application_id",
      "concurrent_leave": null,
      "created_at": null,
      "date_of_birth": "****-07-17",
      "employer_benefits": Array [],
      "employer_fein": "12-3456789",
      "employment_status": "Employed",
      "fineos_absence_id": "NTN-111-ABS-01",
      "first_name": "Jane",
      "gender": "Woman",
      "has_concurrent_leave": false,
      "has_continuous_leave_periods": true,
      "has_employer_benefits": false,
      "has_intermittent_leave_periods": null,
      "has_mailing_address": false,
      "has_other_incomes": false,
      "has_previous_leaves_other_reason": false,
      "has_previous_leaves_same_reason": false,
      "has_reduced_schedule_leave_periods": null,
      "has_state_id": true,
      "has_submitted_payment_preference": true,
      "hours_worked_per_week": 30,
      "last_name": "Doe",
      "leave_details": Object {
        "caring_leave_metadata": null,
        "child_birth_date": null,
        "child_placement_date": null,
        "continuous_leave_periods": Array [
          ContinuousLeavePeriod {
            "end_date": "2021-06-01",
            "leave_period_id": "mock-leave-period-id",
            "start_date": "2021-01-01",
          },
        ],
        "employer_notification_date": "2021-01-01",
        "employer_notified": true,
        "has_future_child_date": null,
        "pregnant_or_recent_birth": null,
        "reason": "Serious Health Condition - Employee",
        "reason_qualifier": null,
      },
      "mailing_address": null,
      "mass_id": "*********",
      "middle_name": "",
      "other_incomes": Array [],
      "payment_preference": Object {
        "account_number": "091000022",
        "bank_account_type": "Checking",
        "payment_method": "Elec Funds Transfer",
        "routing_number": "1234567890",
      },
      "phone": Object {
        "int_code": null,
        "phone_number": "123-456-****",
        "phone_type": "Cell",
      },
      "previous_leaves_other_reason": Array [],
      "previous_leaves_same_reason": Array [],
      "residential_address": Address {
        "city": "Boston",
        "line_1": "1234 My St.",
        "line_2": null,
        "state": "MA",
        "zip": "00000",
      },
      "status": "Completed",
      "tax_identifier": "***-**-****",
      "work_pattern": WorkPattern {
        "work_pattern_days": Array [
          WorkPatternDay {
            "day_of_week": "Sunday",
            "minutes": null,
          },
          WorkPatternDay {
            "day_of_week": "Monday",
            "minutes": null,
          },
          WorkPatternDay {
            "day_of_week": "Tuesday",
            "minutes": null,
          },
          WorkPatternDay {
            "day_of_week": "Wednesday",
            "minutes": null,
          },
          WorkPatternDay {
            "day_of_week": "Thursday",
            "minutes": null,
          },
          WorkPatternDay {
            "day_of_week": "Friday",
            "minutes": null,
          },
          WorkPatternDay {
            "day_of_week": "Saturday",
            "minutes": null,
          },
        ],
        "work_pattern_type": "Fixed",
      },
    }
  }
>
  <div
    className="maxw-mobile-lg"
  >
    <aside
      className="border-top-1 border-primary"
    />
    <article
      className="border-x border-bottom border-base-lighter"
    >
      <StatusCard>
        <CompletedStatusCard
          claim={
            BenefitsApplication {
              "application_id": "mock_application_id",
              "concurrent_leave": null,
              "created_at": null,
              "date_of_birth": "****-07-17",
              "employer_benefits": Array [],
              "employer_fein": "12-3456789",
              "employment_status": "Employed",
              "fineos_absence_id": "NTN-111-ABS-01",
              "first_name": "Jane",
              "gender": "Woman",
              "has_concurrent_leave": false,
              "has_continuous_leave_periods": true,
              "has_employer_benefits": false,
              "has_intermittent_leave_periods": null,
              "has_mailing_address": false,
              "has_other_incomes": false,
              "has_previous_leaves_other_reason": false,
              "has_previous_leaves_same_reason": false,
              "has_reduced_schedule_leave_periods": null,
              "has_state_id": true,
              "has_submitted_payment_preference": true,
              "hours_worked_per_week": 30,
              "last_name": "Doe",
              "leave_details": Object {
                "caring_leave_metadata": null,
                "child_birth_date": null,
                "child_placement_date": null,
                "continuous_leave_periods": Array [
                  ContinuousLeavePeriod {
                    "end_date": "2021-06-01",
                    "leave_period_id": "mock-leave-period-id",
                    "start_date": "2021-01-01",
                  },
                ],
                "employer_notification_date": "2021-01-01",
                "employer_notified": true,
                "has_future_child_date": null,
                "pregnant_or_recent_birth": null,
                "reason": "Serious Health Condition - Employee",
                "reason_qualifier": null,
              },
              "mailing_address": null,
              "mass_id": "*********",
              "middle_name": "",
              "other_incomes": Array [],
              "payment_preference": Object {
                "account_number": "091000022",
                "bank_account_type": "Checking",
                "payment_method": "Elec Funds Transfer",
                "routing_number": "1234567890",
              },
              "phone": Object {
                "int_code": null,
                "phone_number": "123-456-****",
                "phone_type": "Cell",
              },
              "previous_leaves_other_reason": Array [],
              "previous_leaves_same_reason": Array [],
              "residential_address": Address {
                "city": "Boston",
                "line_1": "1234 My St.",
                "line_2": null,
                "state": "MA",
                "zip": "00000",
              },
              "status": "Completed",
              "tax_identifier": "***-**-****",
              "work_pattern": WorkPattern {
                "work_pattern_days": Array [
                  WorkPatternDay {
                    "day_of_week": "Sunday",
                    "minutes": null,
                  },
                  WorkPatternDay {
                    "day_of_week": "Monday",
                    "minutes": null,
                  },
                  WorkPatternDay {
                    "day_of_week": "Tuesday",
                    "minutes": null,
                  },
                  WorkPatternDay {
                    "day_of_week": "Wednesday",
                    "minutes": null,
                  },
                  WorkPatternDay {
                    "day_of_week": "Thursday",
                    "minutes": null,
                  },
                  WorkPatternDay {
                    "day_of_week": "Friday",
                    "minutes": null,
                  },
                  WorkPatternDay {
                    "day_of_week": "Saturday",
                    "minutes": null,
                  },
                ],
                "work_pattern_type": "Fixed",
              },
            }
          }
        >
          <HeaderSection
            title="Medical leave"
          >
            <Heading
              className="margin-bottom-1 padding-2 padding-top-3"
              level="2"
            >
              <h2
                className="margin-bottom-1 padding-2 padding-top-3 font-heading-md text-bold"
              >
                Medical leave
              </h2>
            </Heading>
          </HeaderSection>
          <TitleAndDetailSectionItem
            details="NTN-111-ABS-01"
            title="Application ID"
          >
            <div
              className="padding-2 padding-bottom-1 padding-top-0 margin-top-0"
            >
              <Heading
                level="4"
                size="6"
              >
                <h4
                  className="font-heading-2xs text-normal"
                >
                  Application ID
                </h4>
              </Heading>
              <p
                className="margin-bottom-05 margin-top-05 text-bold"
              >
                NTN-111-ABS-01
              </p>
            </div>
          </TitleAndDetailSectionItem>
          <TitleAndDetailSectionItem
            details="12-3456789"
            title="Employer Identification Number (EIN)"
          >
            <div
              className="padding-2 padding-bottom-1 padding-top-0 margin-top-0"
            >
              <Heading
                level="4"
                size="6"
              >
                <h4
                  className="font-heading-2xs text-normal"
                >
                  Employer Identification Number (EIN)
                </h4>
              </Heading>
              <p
                className="margin-bottom-05 margin-top-05 text-bold"
              >
                12-3456789
              </p>
            </div>
          </TitleAndDetailSectionItem>
          <ButtonSection
            buttonText="View status updates and details"
            href="/applications/status?absence_case_id=NTN-111-ABS-01"
            iconComponent={
              <Icon
                className="position-absolute flex-align-self-end margin-right-neg-105"
                fill="white"
                name="arrow_forward"
                size={3}
              />
            }
          >
            <div
              className="border-top border-base-lighter padding-2 margin-1 margin-bottom-0"
            >
              <ButtonLink
                className="display-flex flex-align-center flex-justify-center flex-column"
                href="/applications/status?absence_case_id=NTN-111-ABS-01"
              >
                <Link
                  href="/applications/status?absence_case_id=NTN-111-ABS-01"
                >
                  <a
                    className="usa-button display-flex flex-align-center flex-justify-center flex-column"
                    href="/applications/status?absence_case_id=NTN-111-ABS-01"
                  >
                    <div>
                      View status updates and details
                    </div>
                    <Icon
                      className="position-absolute flex-align-self-end margin-right-neg-105"
                      fill="white"
                      name="arrow_forward"
                      size={3}
                    >
                      <svg
                        aria-hidden="true"
                        className="usa-icon--size-3 position-absolute flex-align-self-end margin-right-neg-105"
                        fill="white"
                        focusable="false"
                        role="img"
                      >
                        <use
                          xlinkHref="/img/sprite.svg#arrow_forward"
                        />
                      </svg>
                    </Icon>
                  </a>
                </Link>
              </ButtonLink>
            </div>
          </ButtonSection>
          <ManageDocumentSection
            claim={
              BenefitsApplication {
                "application_id": "mock_application_id",
                "concurrent_leave": null,
                "created_at": null,
                "date_of_birth": "****-07-17",
                "employer_benefits": Array [],
                "employer_fein": "12-3456789",
                "employment_status": "Employed",
                "fineos_absence_id": "NTN-111-ABS-01",
                "first_name": "Jane",
                "gender": "Woman",
                "has_concurrent_leave": false,
                "has_continuous_leave_periods": true,
                "has_employer_benefits": false,
                "has_intermittent_leave_periods": null,
                "has_mailing_address": false,
                "has_other_incomes": false,
                "has_previous_leaves_other_reason": false,
                "has_previous_leaves_same_reason": false,
                "has_reduced_schedule_leave_periods": null,
                "has_state_id": true,
                "has_submitted_payment_preference": true,
                "hours_worked_per_week": 30,
                "last_name": "Doe",
                "leave_details": Object {
                  "caring_leave_metadata": null,
                  "child_birth_date": null,
                  "child_placement_date": null,
                  "continuous_leave_periods": Array [
                    ContinuousLeavePeriod {
                      "end_date": "2021-06-01",
                      "leave_period_id": "mock-leave-period-id",
                      "start_date": "2021-01-01",
                    },
                  ],
                  "employer_notification_date": "2021-01-01",
                  "employer_notified": true,
                  "has_future_child_date": null,
                  "pregnant_or_recent_birth": null,
                  "reason": "Serious Health Condition - Employee",
                  "reason_qualifier": null,
                },
                "mailing_address": null,
                "mass_id": "*********",
                "middle_name": "",
                "other_incomes": Array [],
                "payment_preference": Object {
                  "account_number": "091000022",
                  "bank_account_type": "Checking",
                  "payment_method": "Elec Funds Transfer",
                  "routing_number": "1234567890",
                },
                "phone": Object {
                  "int_code": null,
                  "phone_number": "123-456-****",
                  "phone_type": "Cell",
                },
                "previous_leaves_other_reason": Array [],
                "previous_leaves_same_reason": Array [],
                "residential_address": Address {
                  "city": "Boston",
                  "line_1": "1234 My St.",
                  "line_2": null,
                  "state": "MA",
                  "zip": "00000",
                },
                "status": "Completed",
                "tax_identifier": "***-**-****",
                "work_pattern": WorkPattern {
                  "work_pattern_days": Array [
                    WorkPatternDay {
                      "day_of_week": "Sunday",
                      "minutes": null,
                    },
                    WorkPatternDay {
                      "day_of_week": "Monday",
                      "minutes": null,
                    },
                    WorkPatternDay {
                      "day_of_week": "Tuesday",
                      "minutes": null,
                    },
                    WorkPatternDay {
                      "day_of_week": "Wednesday",
                      "minutes": null,
                    },
                    WorkPatternDay {
                      "day_of_week": "Thursday",
                      "minutes": null,
                    },
                    WorkPatternDay {
                      "day_of_week": "Friday",
                      "minutes": null,
                    },
                    WorkPatternDay {
                      "day_of_week": "Saturday",
                      "minutes": null,
                    },
                  ],
                  "work_pattern_type": "Fixed",
                },
              }
            }
          >
            <div
              className="border-top border-base-lighter padding-2 padding-top-0 margin-1 margin-top-0"
            >
              <Heading
                className="padding-bottom-3 padding-top-3"
                level="4"
              >
                <h4
                  className="padding-bottom-3 padding-top-3 font-heading-xs text-bold"
                >
                  Manage your application documents
                </h4>
              </Heading>
              <ButtonLink
                className="display-block margin-bottom-3"
                href="/applications/status/#view_notices?absence_case_id=NTN-111-ABS-01"
                variation="unstyled"
              >
                <Link
                  href="/applications/status/#view_notices?absence_case_id=NTN-111-ABS-01"
                >
                  <a
                    className="usa-button display-block margin-bottom-3 usa-button--unstyled"
                    href="/applications/status/#view_notices?absence_case_id=NTN-111-ABS-01"
                  >
                    View notices
                  </a>
                </Link>
              </ButtonLink>
              <ButtonLink
                className="display-block margin-bottom-2"
                href="/applications/status/#upload_documents?absence_case_id=NTN-111-ABS-01"
                variation="unstyled"
              >
                <Link
                  href="/applications/status/#upload_documents?absence_case_id=NTN-111-ABS-01"
                >
                  <a
                    className="usa-button display-block margin-bottom-2 usa-button--unstyled"
                    href="/applications/status/#upload_documents?absence_case_id=NTN-111-ABS-01"
                  >
                    Upload documents
                  </a>
                </Link>
              </ButtonLink>
            </div>
          </ManageDocumentSection>
        </CompletedStatusCard>
      </StatusCard>
    </article>
  </div>
</ApplicationCardV2>
`;

exports[`ApplicationCardV2 components match their snapshots in progress component status matches snapshot 1`] = `
<ApplicationCardV2
  claim={
    BenefitsApplication {
      "application_id": "mock_application_id",
      "concurrent_leave": null,
      "created_at": null,
      "date_of_birth": "****-07-17",
      "employer_benefits": Array [],
      "employer_fein": "12-3456789",
      "employment_status": "Employed",
      "fineos_absence_id": "NTN-111-ABS-01",
      "first_name": "Jane",
      "gender": "Woman",
      "has_concurrent_leave": false,
      "has_continuous_leave_periods": true,
      "has_employer_benefits": false,
      "has_intermittent_leave_periods": null,
      "has_mailing_address": false,
      "has_other_incomes": false,
      "has_previous_leaves_other_reason": false,
      "has_previous_leaves_same_reason": false,
      "has_reduced_schedule_leave_periods": null,
      "has_state_id": true,
      "has_submitted_payment_preference": null,
      "hours_worked_per_week": 30,
      "last_name": "Doe",
      "leave_details": Object {
        "caring_leave_metadata": null,
        "child_birth_date": null,
        "child_placement_date": null,
        "continuous_leave_periods": Array [
          ContinuousLeavePeriod {
            "end_date": "2021-06-01",
            "leave_period_id": "mock-leave-period-id",
            "start_date": "2021-01-01",
          },
        ],
        "employer_notification_date": "2021-01-01",
        "employer_notified": true,
        "has_future_child_date": null,
        "pregnant_or_recent_birth": null,
        "reason": "Serious Health Condition - Employee",
        "reason_qualifier": null,
      },
      "mailing_address": null,
      "mass_id": "*********",
      "middle_name": "",
      "other_incomes": Array [],
      "payment_preference": null,
      "phone": Object {
        "int_code": null,
        "phone_number": "123-456-****",
        "phone_type": "Cell",
      },
      "previous_leaves_other_reason": Array [],
      "previous_leaves_same_reason": Array [],
      "residential_address": Address {
        "city": "Boston",
        "line_1": "1234 My St.",
        "line_2": null,
        "state": "MA",
        "zip": "00000",
      },
      "status": "Submitted",
      "tax_identifier": "***-**-****",
      "work_pattern": WorkPattern {
        "work_pattern_days": Array [
          WorkPatternDay {
            "day_of_week": "Sunday",
            "minutes": null,
          },
          WorkPatternDay {
            "day_of_week": "Monday",
            "minutes": null,
          },
          WorkPatternDay {
            "day_of_week": "Tuesday",
            "minutes": null,
          },
          WorkPatternDay {
            "day_of_week": "Wednesday",
            "minutes": null,
          },
          WorkPatternDay {
            "day_of_week": "Thursday",
            "minutes": null,
          },
          WorkPatternDay {
            "day_of_week": "Friday",
            "minutes": null,
          },
          WorkPatternDay {
            "day_of_week": "Saturday",
            "minutes": null,
          },
        ],
        "work_pattern_type": "Fixed",
      },
    }
  }
  number={2}
>
  <div
    className="maxw-mobile-lg"
  >
    <aside
      className="border-top-1 border-primary"
    />
    <article
      className="border-x border-bottom border-base-lighter"
    >
      <StatusCard>
        <InProgressStatusCard
          claim={
            BenefitsApplication {
              "application_id": "mock_application_id",
              "concurrent_leave": null,
              "created_at": null,
              "date_of_birth": "****-07-17",
              "employer_benefits": Array [],
              "employer_fein": "12-3456789",
              "employment_status": "Employed",
              "fineos_absence_id": "NTN-111-ABS-01",
              "first_name": "Jane",
              "gender": "Woman",
              "has_concurrent_leave": false,
              "has_continuous_leave_periods": true,
              "has_employer_benefits": false,
              "has_intermittent_leave_periods": null,
              "has_mailing_address": false,
              "has_other_incomes": false,
              "has_previous_leaves_other_reason": false,
              "has_previous_leaves_same_reason": false,
              "has_reduced_schedule_leave_periods": null,
              "has_state_id": true,
              "has_submitted_payment_preference": null,
              "hours_worked_per_week": 30,
              "last_name": "Doe",
              "leave_details": Object {
                "caring_leave_metadata": null,
                "child_birth_date": null,
                "child_placement_date": null,
                "continuous_leave_periods": Array [
                  ContinuousLeavePeriod {
                    "end_date": "2021-06-01",
                    "leave_period_id": "mock-leave-period-id",
                    "start_date": "2021-01-01",
                  },
                ],
                "employer_notification_date": "2021-01-01",
                "employer_notified": true,
                "has_future_child_date": null,
                "pregnant_or_recent_birth": null,
                "reason": "Serious Health Condition - Employee",
                "reason_qualifier": null,
              },
              "mailing_address": null,
              "mass_id": "*********",
              "middle_name": "",
              "other_incomes": Array [],
              "payment_preference": null,
              "phone": Object {
                "int_code": null,
                "phone_number": "123-456-****",
                "phone_type": "Cell",
              },
              "previous_leaves_other_reason": Array [],
              "previous_leaves_same_reason": Array [],
              "residential_address": Address {
                "city": "Boston",
                "line_1": "1234 My St.",
                "line_2": null,
                "state": "MA",
                "zip": "00000",
              },
              "status": "Submitted",
              "tax_identifier": "***-**-****",
              "work_pattern": WorkPattern {
                "work_pattern_days": Array [
                  WorkPatternDay {
                    "day_of_week": "Sunday",
                    "minutes": null,
                  },
                  WorkPatternDay {
                    "day_of_week": "Monday",
                    "minutes": null,
                  },
                  WorkPatternDay {
                    "day_of_week": "Tuesday",
                    "minutes": null,
                  },
                  WorkPatternDay {
                    "day_of_week": "Wednesday",
                    "minutes": null,
                  },
                  WorkPatternDay {
                    "day_of_week": "Thursday",
                    "minutes": null,
                  },
                  WorkPatternDay {
                    "day_of_week": "Friday",
                    "minutes": null,
                  },
                  WorkPatternDay {
                    "day_of_week": "Saturday",
                    "minutes": null,
                  },
                ],
                "work_pattern_type": "Fixed",
              },
            }
          }
          number={2}
        >
          <HeaderSection
            title="Application 2"
          >
            <Heading
              className="margin-bottom-1 padding-2 padding-top-3"
              level="2"
            >
              <h2
                className="margin-bottom-1 padding-2 padding-top-3 font-heading-md text-bold"
              >
                Application 2
              </h2>
            </Heading>
          </HeaderSection>
          <TitleAndDetailSectionItem
            details="12-3456789"
            title="Employer Identification Number (EIN)"
          >
            <div
              className="padding-2 padding-bottom-1 padding-top-0 margin-top-0"
            >
              <Heading
                level="4"
                size="6"
              >
                <h4
                  className="font-heading-2xs text-normal"
                >
                  Employer Identification Number (EIN)
                </h4>
              </Heading>
              <p
                className="margin-bottom-05 margin-top-05 text-bold"
              >
                12-3456789
              </p>
            </div>
          </TitleAndDetailSectionItem>
          <ButtonSection
            buttonText="Continue application"
            href="/applications/checklist?claim_id=mock_application_id"
            iconComponent={null}
          >
            <div
              className="border-top border-base-lighter padding-2 margin-1 margin-bottom-0"
            >
              <ButtonLink
                className="display-flex flex-align-center flex-justify-center flex-column"
                href="/applications/checklist?claim_id=mock_application_id"
              >
                <Link
                  href="/applications/checklist?claim_id=mock_application_id"
                >
                  <a
                    className="usa-button display-flex flex-align-center flex-justify-center flex-column"
                    href="/applications/checklist?claim_id=mock_application_id"
                  >
                    <div>
                      Continue application
                    </div>
                  </a>
                </Link>
              </ButtonLink>
            </div>
          </ButtonSection>
        </InProgressStatusCard>
      </StatusCard>
    </article>
  </div>
</ApplicationCardV2>
`;
